# PathTracer

./: .clang-format  CMakeLists.txt  README.md  build.bat  build.sh
src/: main.cpp
